[package]
name = "instant_json"
version = "0.1.0"
edition = "2021"
authors = ["Julian Dax <julian.dax@posteo.de>"]
description = "Blazingly fast, schema-based JSON parsing"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
js-sys = "0.3.59"
web-sys = { version = "0.3.59", features = ["console"] }
pest = "2.3.0"
pest_meta = "2.3.0"
pest_vm = "2.3.0"
thiserror = "1.0"
